--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,10 @@
 name: DeathRevenge
 version: '1.0'
-main: com.example.deathrevenge.DeathRevenge
+main: com.deathrevenge.DeathRevenge
 api-version: '1.21'
-description: A plugin that gives players a chance for revenge after death 
+description: A plugin that gives players a chance for revenge after death
+commands:
+  deathrevenge:
+    description: Shows information about the DeathRevenge plugin
+    aliases: [dr]
+    usage: /<command> 
